<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/plu_size_04">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_disclaimer_title"
                style="@style/PlutoTextHighlightLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/encrypt_disclaimer_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_seed_responsibility"
                style="@style/PlutoTextSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/plu_size_02"
                android:text="@string/encrypt_seed_responsibility"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_disclaimer_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Text_responsible_use"
                style="@style/PlutoTextSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/plu_size_02"
                android:text="@string/encrypt_responsible_use"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_seed_responsibility" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_indemnification"
                style="@style/PlutoTextSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/plu_size_02"
                android:text="@string/encrypt_indemnification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Text_responsible_use" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_suggested_use"
                style="@style/PlutoTextSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/plu_size_08"
                android:background="@drawable/plu_bg_rounded_corners_solid"
                android:padding="@dimen/plu_size_04"
                android:text="@string/encrypt_suggested_use"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_indemnification" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/plu_divider"
        android:layout_marginBottom="@dimen/plu_size_04"
        android:background="@color/plu_divider"
        app:layout_constraintBottom_toTopOf="@id/check_box_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/check_box_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/plu_size_04"
        android:text="@string/encrypt_consent_agreement"
        app:layout_constraintBottom_toTopOf="@id/button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        style="@style/PlutoPrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/plu_size_04"
        android:layout_marginTop="@dimen/plu_size_04"
        android:text="@string/common_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
